Wildcraft fine wine can be distilled into wildcraft brandy - DONE!!!
Wildcraft/Wildcraft Trees brandies renamed properly - DONE!!!
Gozinaki/trail mix recipes only need 2 handfuls of acorns, not 3 - DONE!!!
Soulstorm brew has correct text in bottles - DONE!!!
Ukranian translation updated (thanks to _epic_fish_ and .olexn)
Polish translation updated (thanks to Sako47) - DONE!!!
Many foods can be placed on display case / shelves

1.6.7

Updated to NET 7.0
Wildcraft Trees compatibility finally added
Wildcraft compatibility updated
Salt works in meals again
Non-chopped meat works in porridge
New gelatin textures
Chopped food can be used for broth
Aged meat can be used for broth
PS broth recipes require 1 item instead of 2
Lard harden time reduced to 1/4th previous values; corrected harden transition numbers
Soulstorm Brew buffed from +10 HP per liter to +100 HP per liter :^)
Wildcraft nutrition in pemmican corrected
Fish nugget soup text fixed
Japanese translation updated (thanks to macoto_hino)
Brazilian Portuguese, Italian, Polish, Russian translations added/updated (thanks to the Niclass & the Crowdin team)



1.6.6

Clarified broth added
Egg yolk can be used in stews & soup
Sausage can be used in soup
Meat can be added to porridge (including sausage)
Saltmaking process revamped (check Cooking 101 for details)
Broth nutrition values fixed in bread, fruit bread, dumplings, muffins, and soft bread
Part-baked balls/mushroom/vegetable/stuffed pepper handbook crashing fixed
Handbook no longer says you can put syrups & toppings on regular bread
Trail mix handbook entry moved to Cooking 102
Cooking 101 & 102 alphabetized
Salted peanut candy requires correct amount of peanut paste
Boiled and pickled eggs re-added (not sure what happened there)
Funeral bell & pink bonnet mushrooms given proper health values (watch out)

1.6.5
Dehydrated fruits cure into the same amount of dried fruits (for real this time)
Handbook mentions that 1 L of broth is needed for meals