@@ -665,7 +665,7 @@
   "game:meal-ingredient-stew-secondary-bushmeat-raw": "bushmeat",
 
     "expandedfoodsguide-title": "Cooking 101 - The Basics",
-    "expandedfoodsguide-text": "<strong>Expanded Foods: Chef's Cookbook</strong><br><i>Getting started.</i><br><br>Documentation on this mod can be found <a href=\"https://www.vintagestory.at/forums/topic/3783-expanded-foods-123/\">here.</a><br>Updated versions can be found <a href=\"https://mods.vintagestory.at/show/mod/28#description\">here.</a><br><strong>REQUIRES 'A CULINARY ARTILLERY' MOD TO FUNCTION</strong><br><br><strong>Introduction</strong><br>This mod adds a wide variety of uses for food that will make your cooking experience more in-depth. It also interacts with the mods <a href=\"https://mods.vintagestory.at/show/mod/259/\">Acorns</a>, <a href=\"https://mods.vintagestory.at/show/mod/487\">Alchemy</a>, <a href=\"https://mods.vintagestory.at/show/mod/371/\">Braziers</a>, <a href=\"https://mods.vintagestory.at/moreanimals/\">More Animals</a>, <a href=\"https://mods.vintagestory.at/show/mod/1238/\">Primitive Survival</a>, <a href=\"https://mods.vintagestory.at/show/mod/450\">SuperFuel</a>, and <a href=\"https://mods.vintagestory.at/wildcraft/\">Wildcraft</a> for even more recipes. Acorns, Primitive Survival, and Wildcraft are recommended - Wild Farming is also highly recommended, since without it you cannot grow seaweed.<br><i>This mod includes the ability to make bushmeat meals, vinegar and salt. Delete those mods if you are using this one.</i><br><br><strong><i>COOKING BLOCK INFO</i></strong><br><br><strong><a href=\"handbook://block-aculinaryartillery:bottle-clay-burned\">Bottles</a></strong><br>Bottles are used for drizzling syrups or sauces on food via the mixing bowl, fermenting drinks, or simply drinking.<br><strong><a href=\"handbook://block-aculinaryartillery:meathooks-aged-copper-east\">Meat Rack</a></strong><br>Sausage or raw meat (but not fish) can be Dried on a meat rack. This process ages the meat and boosts its nutritional value. Raw aged meat needs to have the exterior cut away before cooking.<br>All forms of meat can be Cooked or Baked.<br><strong><a href=\"handbook://block-aculinaryartillery:saucepan-raw\">Saucepan</a></strong><br>Functions somewhat similarly to a bucket, but you can place it onto a firepit to Boil the liquids inside, turning sap and juice into syrup. In order to Boil something in the saucepan, it must be placed into its slots.<br><strong><a href=\"handbook://block-aculinaryartillery:spile-copper-north\">Spile</a></strong><br>Jam this into a tree and place a bucket or saucepan beneath it to collect sap from the tree during certain times of the year.<br><a href=\"handbook://item-expandedfoods:softresin\">Fresh Resin</a> can be collected from pine trees in March through November; or acacia trees in April through September.<br><a href=\"handbook://item-expandedfoods:maplesapportion\">Maple Sap</a> can be collected from maple trees in January, February, and March.<br><a href=\"handbook://item-expandedfoods:birchsapportion\">Birch Sap</a> can be collected from birch trees in April, May, and June.<br><br><strong><i>BASIC FOOD LIST</i></strong><br><strong><a href=\"handbook://item-egg-chicken-boiled\">Boiled Eggs</a></strong><br>Boil 1 raw egg and 0.5 L of water. Can be used in salads and cold pasta meals.<br><strong><a href=\"handbook://item-egg-chicken-pickled\">Pickled Eggs</a></strong><br>Seal 1 boiled egg and 0.1 L of vinegar in a barrel. Can be used in salads and cold pasta meals.<br><strong><a href=\"handbook://item-expandedfoods:limeegg-chicken\">Water-Glassed Eggs</a></strong><br>Seal 1 raw egg with 0.1 L of slaked lime in a barrel. Functionally identical to raw eggs. Can be re-sealed in the barrel to last longer.<br><br><strong><a href=\"handbook://item-expandedfoods:breadcrumbs-spelt\">Bread Crumbs</a></strong><br>You can tear a loaf of bread up in the Crafting Grid or place it in a quern to make bread crumbs out of it. When used in meals, a single portion of bread crumbs gives as much nutrition as an entire loaf of bread.<br><strong><a href=\"handbook://item-expandedfoods:candiedfruit-cranberry\">Candied Fruit</a></strong><br>Boil 1 fresh fruit with 0.1 L of its corresponding syrup. Candied fruit can be eaten on its own or added to fruit bread/muffins.<br><strong><a href=\"handbook://item-expandedfoods:dehydratedfruit-cranberry\">Dehydrated Fruit</a></strong><br>After juicing fruit, place the mash into the crafting grid to separate into portions that dry over time into dried fruit. Dehydrated fruit can be added to any meal that accepts fruit.<br><strong><a href=\"handbook://item-expandedfoods:dryfruit-cranberry\">Dried Fruit</a></strong><br>Bake fruit to preserve them, or dry dehydrated berries. Dried fruit can be added to any meal that accepts fruit.<br><strong>Meat Variants</strong><br>Hit some meat with a stone or hammer to produce a <a href=\"handbook://item-expandedfoods:meatnugget-redmeat-smashed\">smashed</a> version of that meat. Slice the tenderized meat up with a knife or cleaver to make <a href=\"handbook://item-expandedfoods:meatnugget-redmeat-raw\">meat nuggets</a>. This can be done with fish as well, and can be used in any meals that allow regular meat. You can also hang meat from a <a href=\"handbook://block-aculinaryartillery:meathooks-aged-copper-east\">meat rack</a> to <a href=\"handbook://item-expandedfoods:agedmeat-redmeat-normal\">Dry Age</a> it, which needs to have the outside cut off before cooking.<br><strong><a href=\"handbook://item-salt\">Salt</a></strong><br>Seal 10 L of salt water or 5 L of brine in a barrel to make a <a href=\"handbook://item-expandedfoods:saltcrystal-dry\">salt crystal</a>. You can also Boil the same amounts to get a <a href=\"handbook://item-expandedfoods:saltcrystal-dry\">damp salt crystal</a>. Damp salt crystals must dry into dried salt crystals. Dried salt crystals can be ground in the quern to make salt. Salt now heals 0.5-1 HP when used in food.<br><strong><a href=\"handbook://item-vinegarportion\">Vinegar</a></strong><br>Can be made by sealing fresh berries in a barrel for 28 days, or by letting wine rot instead of cure. 3 fresh fruits can be sealed with 1 L sealed with vinegar as well - it takes a fraction of the time.<br><br><strong>New Vegetable Variants</strong><br>Cook or Bake <a href=\"handbook://item-expandedfoods:cookedveggie-cabbage-perfect\">veggies</a> to boost its nutrition and shelf life. Great way to extend the life of veggies that are about to rot. Veggies and mushrooms can also be <a href=\"handbook://item-expandedfoods:choppedvegetable-flyagaric\">chopped</a> with a knife or cleaver to make them easier to eat, and chopped mushrooms can be eaten normally.<br><br><strong>BOILING FOOD</strong><br>You can boil eggs, meat, sausage, mushrooms, or vegetables in the saucepan at a ratio of 1 item per 0.5 L of water.<br><br><strong>FRYING FOOD</strong><br>You can boil any breaded item with 0.1 L of food oil or lard in the saucepan to fry it perfectly every time. Ideal if you hate baking.",
+    "expandedfoodsguide-text": "<strong>Expanded Foods: Chef's Cookbook</strong><br><i>Getting started.</i><br><br>Documentation on this mod can be found <a href=\"https://www.vintagestory.at/forums/topic/3783-expanded-foods-123/\">here.</a><br>Updated versions can be found <a href=\"https://mods.vintagestory.at/show/mod/28#description\">here.</a><br><strong>REQUIRES 'A CULINARY ARTILLERY' MOD TO FUNCTION</strong><br><br><strong>Introduction</strong><br>This mod adds a wide variety of uses for food that will make your cooking experience more in-depth. It also interacts with the mods <a href=\"https://mods.vintagestory.at/show/mod/259/\">Acorns</a>, <a href=\"https://mods.vintagestory.at/show/mod/487\">Alchemy</a>, <a href=\"https://mods.vintagestory.at/show/mod/371/\">Braziers</a>, <a href=\"https://mods.vintagestory.at/moreanimals/\">More Animals</a>, <a href=\"https://mods.vintagestory.at/show/mod/1238/\">Primitive Survival</a>, <a href=\"https://mods.vintagestory.at/show/mod/450\">SuperFuel</a>, and <a href=\"https://mods.vintagestory.at/wildcraft/\">Wildcraft</a> for even more recipes. Acorns, Primitive Survival, and Wildcraft are recommended - Wild Farming is also highly recommended, since without it you cannot grow seaweed.<br><i>This mod includes the ability to make bushmeat meals, vinegar and salt. Delete those mods if you are using this one.</i><br><br><strong><i>COOKING BLOCK INFO</i></strong><br><br><strong><a href=\"handbook://block-aculinaryartillery:bottle-clay-burned\">Bottles</a></strong><br>Bottles are used for drizzling syrups or sauces on food via the mixing bowl, fermenting drinks, or simply drinking.<br><strong><a href=\"handbook://block-aculinaryartillery:meathooks-aged-copper-east\">Meat Rack</a></strong><br>Sausage or raw meat (but not fish) can be Dried on a meat rack. This process ages the meat and boosts its nutritional value. Raw aged meat needs to have the exterior cut away before cooking.<br>All forms of meat can be Cooked or Baked.<br><strong><a href=\"handbook://block-aculinaryartillery:saucepan-raw\">Saucepan</a></strong><br>Functions somewhat similarly to a bucket, but you can place it onto a firepit to Boil the liquids inside, turning sap and juice into syrup. In order to Boil something in the saucepan, it must be placed into its slots.<br><strong><a href=\"handbook://block-aculinaryartillery:spile-copper-north\">Spile</a></strong><br>Jam this into a tree and place a bucket or saucepan beneath it to collect sap from the tree during certain times of the year.<br><a href=\"handbook://item-expandedfoods:softresin\">Fresh Resin</a> can be collected from pine trees in March through November; or acacia trees in April through September.<br><a href=\"handbook://item-expandedfoods:maplesapportion\">Maple Sap</a> can be collected from maple trees in January, February, and March.<br><a href=\"handbook://item-expandedfoods:birchsapportion\">Birch Sap</a> can be collected from birch trees in April, May, and June.<br><br><strong><i>BASIC FOOD LIST</i></strong><br><strong><a href=\"handbook://item-egg-chicken-boiled\">Boiled Eggs</a></strong><br>Boil 1 raw egg and 0.5 L of water. Can be used in salads and cold pasta meals.<br><strong><a href=\"handbook://item-egg-chicken-pickled\">Pickled Eggs</a></strong><br>Seal 1 boiled egg and 0.1 L of vinegar in a barrel. Can be used in salads and cold pasta meals.<br><strong><a href=\"handbook://item-expandedfoods:limeegg-chicken\">Water-Glassed Eggs</a></strong><br>Seal 1 raw egg with 0.1 L of slaked lime in a barrel. Functionally identical to raw eggs. Can be re-sealed in the barrel to last longer.<br><br><strong><a href=\"handbook://item-expandedfoods:breadcrumbs-spelt\">Bread Crumbs</a></strong><br>You can tear a loaf of bread up in the Crafting Grid or place it in a quern to make bread crumbs out of it. When used in meals, a single portion of bread crumbs gives as much nutrition as an entire loaf of bread.<br><strong><a href=\"handbook://item-expandedfoods:candiedfruit-cranberry\">Candied Fruit</a></strong><br>Boil 1 fresh fruit with 0.1 L of its corresponding syrup. Candied fruit can be eaten on its own or added to fruit bread/muffins.<br><strong><a href=\"handbook://item-expandedfoods:dehydratedfruit-cranberry\">Dehydrated Fruit</a></strong><br>After juicing fruit, place the mash into the crafting grid to separate into portions that dry over time into dried fruit. Dehydrated fruit can be added to any meal that accepts fruit.<br><strong><a href=\"handbook://item-expandedfoods:dryfruit-cranberry\">Dried Fruit</a></strong><br>Bake fruit to preserve them, or dry dehydrated berries. Dried fruit can be added to any meal that accepts fruit.<br><strong>Meat Variants</strong><br>Hit some meat with a stone or hammer to produce a <a href=\"handbook://item-expandedfoods:meatnugget-redmeat-smashed\">smashed</a> version of that meat. Slice the tenderized meat up with a knife or cleaver to make <a href=\"handbook://item-expandedfoods:meatnugget-redmeat-raw\">meat nuggets</a>. This can be done with fish as well, and can be used in any meals that allow regular meat. You can also hang meat from a <a href=\"handbook://block-aculinaryartillery:meathooks-aged-copper-east\">meat rack</a> to <a href=\"handbook://item-expandedfoods:agedmeat-redmeat-normal\">Dry Age</a> it, which needs to have the outside cut off before cooking.<br><strong><a href=\"handbook://item-salt\">Salt</a></strong><br>Seal 10 L of salt water or 5 L of brine in a barrel to make a <a href=\"handbook://item-expandedfoods:saltcrystal-damp\">damp salt crystal</a>. You can also Boil the same amounts to get a <a href=\"handbook://item-expandedfoods:saltcrystal-dry\">dry salt crystal</a>. You can mix 25 L of water with 1 halite stone to output 25 L of salt water, making Halite worth 2.5 salt if you fully optimize the process. Damp salt crystals must dry into dried salt crystals. Dried salt crystals can be ground in the quern to make salt. Salt now heals 0.5-1 HP when used in food.<br><strong><a href=\"handbook://item-vinegarportion\">Vinegar</a></strong><br>Can be made by sealing fresh berries in a barrel for 28 days, or by letting wine rot instead of cure. 3 fresh fruits can be sealed with 1 L sealed with vinegar as well - it takes a fraction of the time.<br><br><strong>New Vegetable Variants</strong><br>Cook or Bake <a href=\"handbook://item-expandedfoods:cookedveggie-cabbage-perfect\">veggies</a> to boost its nutrition and shelf life. Great way to extend the life of veggies that are about to rot. Veggies and mushrooms can also be <a href=\"handbook://item-expandedfoods:choppedvegetable-flyagaric\">chopped</a> with a knife or cleaver to make them easier to eat, and chopped mushrooms can be eaten normally.<br><br><strong>BOILING FOOD</strong><br>You can boil eggs, meat, sausage, mushrooms, or vegetables in the saucepan at a ratio of 1 item per 0.5 L of water.<br><br><strong>FRYING FOOD</strong><br>You can boil any breaded item with 0.1 L of food oil or lard in the saucepan to fry it perfectly every time. Ideal if you hate baking.",
 
     "expandedfoodsguide2-title": "Cooking 102 - Expanded Foods",
     "expandedfoodsguide2-text": "<strong>Cooking 102 - Expanded Foods</strong><br><i>Cuisine for the discerning palate.</i><br><br>Documentation on this mod can be found <a href=\"https://www.vintagestory.at/forums/topic/3783-expanded-foods-123/\">here.</a><br>Updated versions can be found <a href=\"https://mods.vintagestory.at/show/mod/28#description\">here.</a><br><br><strong><i>EXPANDED FOOD LIST</i></strong><br><br>All Expanded Foods are Kneaded in a Mixing Bowl.<br><br><strong><a href=\"handbook://item-bread-flax-perfect\">Bread</a></strong><br><i>0.1 L of water OR milk OR pasteurized milk OR soy milk OR broth<br>1 bag of flour<br>0.1 L of Food Oil or Lard (optional)<br>0.1 L Bread Starter (optional)</i><br>Bake, Cook, or use as pie crust.<br><strong><a href=\"handbook://item-expandedfoods:breadedmeatnugget-flax-bushmeat-smashed\">Breaded Food</a></strong><br><i>0.1 L of egg white/egg yolk/liquid egg OR 0.1 liters of honey OR food oil OR birch syrup OR maple syrup OR lard<br>1 handful of bread crumbs<br>1 bag of flour<br>1 handful of smashed meat or meat nuggets OR 1 vegetable/chopped handful of vegetables OR 1 handful of rice grain OR 1 slice of cheese OR 1 boiled/pickled egg.<br>Salt (optional)</i><br>When you have breaded your food, you can Knead it with 0.1 L of food oil or lard to 'deep fry' it, or you can Boil it with 0.1 L of food oil or lard. Once Cooked, Baked, or Boiled, Knead 0.1 L of honey, soy sauce, fish sauce, birch syrup, maple syrup, peanut butter, or peanut sauce in the mixing bowl.<br>Can be used in salads or cold pasta meals.<br><strong><a href=\"handbook://item-expandedfoods:candy-peanut-raw\">Candy</a></strong><br><i>0.1 L of honey OR syrup OR peanut butter<br>0.1 L of peanut paste OR sunflower grain<br>Salt (optional)</i><br>Knead in the mixing bowl.<br><strong><a href=\"handbook://item-expandedfoods:dumpling-raw\">Dumplings</a></strong><br><i>1 handful of Soft Dough<br>1 handful of meat nuggets OR chopped veggies OR soybeans (optional)<br>Salt (optional)</i><br>Can be used in stews and soups, Cooked or Baked.<br><strong><a href=\"handbook://item-expandedfoods:fruitbar-raw\">Fruit Bar</a></strong><br><i>1 handful of peanuts (regular, cooked, or kernels) OR 1 handful of sunflower grain in 1 slot<br>1 fruits or pumpkin slices<br>1 Non-vegetable gelatin<br>0.1 L of peanut paste OR honey OR syrup<br>Salt (optional)</i><br>Knead in the mixing bowl.<br><strong><a href=\"handbook://item-expandedfoods:berrybread-cooked\">Fruit Bread</a></strong><br><i>1 ball of dough<br>1 fruits or pumpkin slices in up to 5 slots<br>Fruit, birch, maple, or honey gelatin (optional)<br></i>Once Baked or Cooked, Knead 0.1 L of syrup, honey, peanut butter, or peanut sauce in the mixing bowl.<br><strong><a href=\"handbook://item-expandedfoods:gozinaki-cooked\">Gozinaki</a></strong><br><i>1 handful of peanuts (regular, cooked, or kernels) OR 1 handful of sunflower grain in 1 slot<br>1 portion of honey<br>Salt (optional)</i><br>Knead ingredients in the mixing bowl, then Bake. Once baked, add honey, syrup, peanut butter, or peanut sauce to the mixing bowl and Knead with gozinaki for a real treat.<br><strong><a href=\"handbook://item-expandedfoods:hardtack-spelt-bake1\">Hardtack</a></strong><br>Knead 1 flour, 0.1 liters of water, and 1 handful of salt. <i>Eggs and Herbs optional.</i> Once Baked, it can be Baked up to 3 more times to crush the moisture and flavor out of it and make it last longer.<br><strong><a href=\"handbook://item-expandedfoods:gelatin-blueberry\">Gelatin</a></strong><br>Boil 1 liter of bone broth per 1 bone to make 0.25 L of pre-gelatin. Boil 0.1 liters of pre-gelatin, 1 bone, and 1 liter of water to make raw gelatin.<br>Raw Gelatin can be Boiled with 1 liter of water to make plain gelatin, and 0.1 liter of juice or sauce can be added to make something more flavorful. If you are using syrup, then you will need 2 liters of water, each in a different slot of the saucepan.<br>Can be used in pies.<br><strong><a href=\"handbook://item-expandedfoods:muffin-cooked\">Muffin</a></strong><br><i>1 ball of soft dough<br>1 fruits or dried fruits or pumpkin slices in up to 5 slots<br>1 portion of fruit, birch, maple, or honey gelatin (optional)<br></i>Once Baked or Cooked, Knead 0.1 L of syrup, honey, peanut butter, or peanut sauce in the mixing bowl.<br><strong><a href=\"handbook://item-expandedfoods:pasta-dough\">Pasta Dough</a></strong><br><i>1 bag of flour<br>0.1 L of liquid egg<br></i>Once dough is Kneaded, smash until flat with a hammer or rolling pin and cut into noodles with a knife or cleaver. Noodles can be used in meals or Boiled in a saucepan with 1 liter of water to eat by itself.<br><strong><a href=\"handbook://item-expandedfoods:pemmican-raw\">Pemmican</a></strong><br><i>1 handful of animal fat OR 0.1 L of lard<br>1 fruit in 3 slots<br>1 handful of meat nuggets in 2 slots<br>Salt (optional, replaces fruit)</i><br>Cook or Bake.<br><strong><a href=\"handbook://item-expandedfoods:sausage-redmeat-raw\">Sausage</a></strong><br><i>1 handful of animal fat OR 0.1 L of lard<br>1 handful of meat nuggets<br>Cheddar or Blue cheese (optional)<br>Salt (optional)</i><br>Can be hung on a meat rack to Dry it before cooking. Usable in pies, meat stews, au gratin, and pilaf. Cooked sausage can be used in salads.<br><strong><a href=\"handbook://item-expandedfoods:plaindoughball-dough\">Soft Dough</a></strong><br><i>0.1 L of water OR milk OR pasteurized milk OR soy milk OR broth<br>1 bag of flour<br>0.1 L of liquid egg<br>0.1 L of Food Oil or Lard (optional)<br>Yeast Starter (optional)</i><br>Bake, Cook, or use as pie crust.<br><strong><a href=\"handbook://item-expandedfoods:stuffedpepper-spelt-raw\">Stuffed Pepper</a></strong><br><i>1 bellpepper<br>1 handful of meat nuggets OR 1 chopped handful of vegetables OR 1 handful of pickled cabbage/bellpeppers OR 1 handful of grain OR 1 portion of cheese OR 1 boiled egg OR 1 handful of dehydrated/dried fruit OR 1 sausage link.<br>0.1 L of egg white/egg yolk/liquid egg OR 0.1 L of honey OR food oil OR birch syrup OR maple syrup OR lard (breading optional)<br>1 handful of bread crumbs (breading optional)<br>1 bag of flour (breading optional)<br>Salt (optional)</i><br>When you have breaded your pepper, you can Knead it with 0.1 L of food oil or lard to 'deep fry' it, or you can Boil it with 0.1 L of food oil or lard. Once Cooked, Baked, or Boiled, Knead 0.1 L of honey, soy sauce, fish sauce, birch syrup, maple syrup, peanut butter, or peanut sauce in the mixing bowl.<br><strong><a href=\"handbook://item-expandedfoods:sushiveg-cabbage-nooil\">Sushi</a></strong><br><i>1 sheet of <a href=\"handbook://item-expandedfoods:driedseaweed-edible\">dried seaweed</a><br>1 handful of rice grain<br>1 handful of chopped veggies, soybeans, or pickled cabbage (optional)<br>Salt (optional)</i><br>Knead 0.1 L of honey, soy sauce, fish sauce, birch syrup, maple syrup, or peanut sauce in the mixing bowl after creating the sushi roll.<br><strong><a href=\"handbook://item-expandedfoods:trailmixvegetarian-beany\">Vegetarian Trail Mix</a></strong><br><i>1 handful of peanuts (regular, cooked, or kernels) in 1 slot<br>1 handful of soybeans<br>3 handfuls of dried fruit in 1 slot<br>1 slice of Cheddar or Blue cheese<br></i>Kneaded in the mixing bowl. There are 4 types of vegetarian trail mix - Beany, Cheesy, Fruity, and Nutty. To make that variant, add 1 or 2 more slots of any of the previous ingredients (ie. 3 handfuls of acorns/ 1 handful of peanuts into 1 or 2 more slots to make Nutty trail mix).<br><strong><a href=\"handbook://item-expandedfoods:yogurt-plain\">Yogurt</a></strong><br>In a saucepan, Boil milk until it is <a href=\"handbook://item-expandedfoods:pasteurizedmilkportion\">pasteurized</a>. Seal 1 liter of curdled milk and 4 handfuls of non-dried fruits in a barrel for 24 hours to create 0.25 L of <a href=\"handbook://item-expandedfoods:yogurt-starter\">yogurt starter</a>.<br>Knead 0.1 L of pasteurized milk with 0.1 L of yogurt starter to create 0.2 L of <a href=\"handbook://item-expandedfoods:yogurt-ferment\">fermented yogurt</a>. Seal it in a barrel or bottle until it becomes plain yogurt. Knead with 0.1 L of syrup or honey to make <a href=\"handbook://item-expandedfoods:yogurt-blueberry\">flavored yogurt</a>.",
@@ -9343,6 +9343,8 @@
 
     "item-saltcrystal-damp": "Salt crystal (damp)",
     "item-saltcrystal-dry": "Salt crystal (dry)",
+    "itemdesc-saltcrystal-damp": "Wrenched from the waters.",
+    "itemdesc-saltcrystal-dry": "Some things need to be crushed.",
 
     "game:pie-single-egg-chicken-boiled-raw": "Quiche (raw)",
     "game:pie-single-egg-chicken-boiled-partbaked": "Quiche (part-baked)",
