@@ -9,7 +9,7 @@
       "smeltingType": "cook",
       "smeltedStack": {
         "type": "item",
-        "code": "expandedfoods:saltcrystal-damp",
+        "code": "expandedfoods:saltcrystal-dry",
         "quantity": 1,
       },
       "requiresContainer": true
