@@ -5,7 +5,7 @@
   ingredients: [
     { type: "item", code: "saltwaterportion",  litres: 10 }
   ],
-  output: { type: "item", code: "expandedfoods:saltcrystal-dry", stackSize: 1 }
+  output: { type: "item", code: "expandedfoods:saltcrystal-damp", stackSize: 1 }
 },
 {
   code: "water2",
@@ -13,6 +13,6 @@
   ingredients: [
     { type: "item", code: "brineportion",  litres: 5 }
   ],
-  output: { type: "item", code: "expandedfoods:saltcrystal-dry", stackSize: 1 }
+  output: { type: "item", code: "expandedfoods:saltcrystal-damp", stackSize: 1 }
 },
 ]
