@@ -49,7 +49,8 @@ Gozinaki/trail mix recipes only need 2 handfuls of acorns, not 3 - DONE!!!
 Soulstorm brew has correct text in bottles - DONE!!!
 Ukranian translation updated (thanks to _epic_fish_ and .olexn)
 Polish translation updated (thanks to Sako47) - DONE!!!
-Many foods can be placed on display case / shelves
+Many foods can be placed on display case / shelves - DONE!!!
+Salt production refined (thanks to Goose's Salternate mod)
 
 1.6.7
 
